Rework value conversion architecture